<?xml version="1.0" encoding="utf-8"?>
<!-- Use: https://developer.android.com/guide/topics/ui/settings.html#create_a_hierarchy -->
<!-- See: https://developer.android.com/guide/topics/ui/settings/organize-your-settings#preference_categories -->

<!--<PreferenceScreen-->
    <!--xmlns:app="http://schemas.android.com/apk/res/android">-->
<androidx.preference.PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <SwitchPreferenceCompat
            app:key="@string/settings_show_images_key"
            app:title="@string/settings_show_images_label"/>

    <!-- See: https://developer.android.com/reference/androidx/preference/ListPreference -->
    <!-- Use: https://stackoverflow.com/questions/9880841/using-list-preference-in-android/9881253#9881253 -->
    <!-- Use: https://stackoverflow.com/questions/5197228/how-to-set-the-default-value-of-a-listpreference/17509197#17509197 -->
    <ListPreference
        app:key="@string/settings_order_by_key"
        app:title="@string/settings_order_by_label"
        app:defaultValue="@strings/settings_order_by_default"
        app:entries="@array/settings_order_by_labels"
        app:entryValues="@array/settings_order_by_values"/>
</androidx.preference.PreferenceScreen>