<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<data>
		<!-- See: https://stackoverflow.com/questions/38407664/syntax-for-conditional-statements-in-android-xml-layout/38407767#38407767 -->
		<import type="android.view.View" />
		<import type="android.text.InputType" />

		<variable
			name="newsViewModel"
			type="com.example.android.newsapp.NewsViewModel" />
	</data>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<!-- See: Providing Search with SearchView (Android Development Patterns Ep 7) - https://www.youtube.com/watch?v=9OWmnYPX1uc-->
		<SearchView
			android:id="@+id/search"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@color/colorSecondaryLight"
			android:iconifiedByDefault="false"
			android:queryHint="Type your keyword here"
			app:iconifiedByDefault="false"
			android:inputType="@{newsViewModel.retry == View.GONE ? InputType.TYPE_CLASS_TEXT : InputType.TYPE_NULL}"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:query="@={newsViewModel.searchValue}" />

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/list"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:background="@color/colorPrimary"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/search" />


		<!-- See: https://stackoverflow.com/questions/38407664/syntax-for-conditional-statements-in-android-xml-layout/38407767#38407767 -->
		<!-- android:visibility="@{newsViewModel.message != null ? View.VISIBLE : View.GONE}" -->
		<ImageView
			android:id="@+id/errorImage"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginEnd="8dp"
			android:layout_marginBottom="16dp"
			android:src="@{newsViewModel.errorImage}"
			app:layout_constraintBottom_toTopOf="@+id/errorTitle"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			tools:src="@drawable/error_no_content" />

		<TextView
			android:id="@+id/errorTitle"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:layout_marginBottom="16dp"
			android:padding="@dimen/border"
			android:text="@{newsViewModel.errorTitle}"
			android:textAlignment="center"
			android:textAppearance="@style/TextAppearance.NewsApp.Error.Title"
			app:layout_constraintBottom_toTopOf="@+id/errorSubText"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="1.0"
			app:layout_constraintStart_toStartOf="parent"
			tools:text="@string/error_article_title" />

		<TextView
			android:id="@+id/errorSubText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="32dp"
			android:padding="@dimen/border"
			android:text="@{newsViewModel.errorSubText}"
			android:textAlignment="center"
			android:textAppearance="@style/TextAppearance.NewsApp.Error.Message"
			app:layout_constraintBottom_toTopOf="@+id/retry"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintStart_toStartOf="parent"
			tools:text="@string/error_article_subText" />

		<ProgressBar
		android:id="@+id/loading_indicator"
		style="@style/Widget.AppCompat.ProgressBar"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_centerVertical="true"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginBottom="8dp"
		android:visibility="@{safeUnbox(newsViewModel.busy)}"
		app:layout_constraintBottom_toBottomOf="@+id/list"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="@+id/list"
		app:layout_constraintVertical_bias="0.15" />

		<TextView
		android:id="@+id/counter"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_centerVertical="true"
		android:text="@{newsViewModel.progress}"
		android:textAppearance="?android:textAppearanceMedium"
		android:visibility="@{safeUnbox(newsViewModel.busy)}"
		app:layout_constraintBottom_toBottomOf="@+id/loading_indicator"
		app:layout_constraintEnd_toEndOf="@+id/loading_indicator"
		app:layout_constraintStart_toStartOf="@+id/loading_indicator"
		app:layout_constraintTop_toTopOf="@+id/loading_indicator"
		tools:text="50" />

		<Button
			android:id="@+id/retry"
			android:layout_width="wrap_content"
			android:layout_height="0dp"
			android:layout_marginStart="@dimen/border"
			android:layout_marginEnd="@dimen/border"
			android:layout_marginBottom="16dp"
			android:background="@color/colorPrimaryDark"
			android:onClick="@{() -> newsViewModel.restartData()}"
			android:paddingStart="@dimen/button_padding_width"
			android:paddingTop="@dimen/button_padding_height"
			android:paddingEnd="@dimen/button_padding_width"
			android:paddingBottom="@dimen/button_padding_height"
			android:text="@string/retry"
			android:textAppearance="@style/TextAppearance.NewsApp.Error.Button"
			android:textColor="@android:color/primary_text_dark"
			android:visibility="@{safeUnbox(newsViewModel.retry)}"
			app:layout_constraintBottom_toTopOf="@+id/openNetwork"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent" />

		<Button
			android:id="@+id/openNetwork"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="32dp"
			android:background="@color/colorPrimaryDark"
			android:onClick="@{() -> newsViewModel.openNetworkSettings()}"
			android:paddingStart="16dp"
			android:paddingTop="8dp"
			android:paddingEnd="16dp"
			android:paddingBottom="8dp"
			android:text="@string/openNetwork"
			android:textAppearance="@style/TextAppearance.NewsApp.Error.Message"
			android:textColor="@android:color/primary_text_dark"
			android:visibility="@{safeUnbox(newsViewModel.retry)}"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toStartOf="@+id/openData"
			app:layout_constraintHorizontal_bias="0.5"
			app:layout_constraintStart_toStartOf="parent" />

		<Button
			android:id="@+id/openData"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@color/colorPrimaryDark"
			android:onClick="@{() -> newsViewModel.openDataSettings()}"
			android:paddingStart="16dp"
			android:paddingTop="8dp"
			android:paddingEnd="16dp"
			android:paddingBottom="8dp"
			android:text="@string/openData"
			android:textAppearance="@style/TextAppearance.NewsApp.Error.Message"
			android:textColor="@android:color/primary_text_dark"
			android:visibility="@{safeUnbox(newsViewModel.retry)}"
			app:layout_constraintBottom_toBottomOf="@+id/openNetwork"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.5"
			app:layout_constraintStart_toEndOf="@+id/openNetwork"
			app:layout_constraintTop_toTopOf="@+id/openNetwork" />

		<!--<androidx.constraintlayout.widget.Guideline-->
		<!--android:id="@+id/centerGuideline"-->
		<!--android:layout_width="1dp"-->
		<!--android:layout_height="wrap_content"-->
		<!--android:orientation="vertical"-->
		<!--app:layout_constraintGuide_percent="0.5" />-->

	</androidx.constraintlayout.widget.ConstraintLayout>

</layout>